# ConcealedThreatDetection

./: .gitignore  Concealed Threat Detection POC.ipynb  LICENSE  README.md  conda_script.sh  earlystop.yaml  install_libraries.sh  mlflow_warinings.txt  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  THZ_dataset.dvc
src/: dataloader.py  dataset.py  pytorch_object_detection.py  train.py
src/config/: atz.yaml  config.py  local_effdet.yaml
