[tool.poetry]
name = "concealedthreatdetection"
version = "0.1.0"
description = "Concealed threat detectionon human body"
authors = ["soumensardar <soumen.sardar@smithsdetection.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
